# microbit_v2_embassy

./: '  Cargo.toml
.cargo/: config.toml
src/: ble.rs  buttons.rs  display.rs  lib.rs  myuarte.rs
